# glfw_shape_demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
src/: main.cpp
src/common/: shape_demo_utils.h
src/shape_factory/: abstract_shape_factory.h  circle_shape_factory.cpp  circle_shape_factory.h  rectangle_shape_factory.cpp  rectangle_shape_factory.h  triangle_shape_factory.cpp  triangle_shape_factory.h
src/world/: rotated_world_view.cpp  rotated_world_view.h  world_model.cpp  world_model.h  world_view.cpp  world_view.h
